<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_receipt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:paddingBottom="@dimen/_14sdp"
        android:paddingLeft="@dimen/_14sdp"
        android:paddingRight="@dimen/_14sdp"
        android:paddingTop="@dimen/_14sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/tvChargeTotal"
            android:gravity="center"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@color/purple_500"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/receiptOut"
            android:gravity="center"
            android:text="@string/text_rounded_info"
            android:textColor="#979797"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:gravity="center"
            android:text="@string/text_choose_payment_info"
            android:textColor="#979797"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <View
                android:background="@color/grey_50"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:text="CASH"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_marginBottom="@dimen/_3sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioGroup
                            android:id="@+id/radioGroupCash"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal" >

                            <RadioButton
                                android:id="@+id/radioCash1"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:background="@drawable/radio_selector"
                                android:button="@null"
                                android:paddingLeft="@dimen/_3sdp"
                                android:paddingRight="@dimen/_3sdp"
                                android:gravity="center"
                                android:textAllCaps="false"
                                android:layout_marginEnd="3dp"
                                android:textColor="@drawable/radio_textcolor_selector" />
                            <RadioButton
                                android:id="@+id/radioCash2"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:background="@drawable/radio_selector"
                                android:button="@null"
                                android:paddingLeft="@dimen/_3sdp"
                                android:paddingRight="@dimen/_3sdp"
                                android:gravity="center"
                                android:textAllCaps="false"
                                android:layout_marginStart="3dp"
                                android:textColor="@drawable/radio_textcolor_selector" />
                            <RadioButton
                                android:id="@+id/radioCash3"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:background="@drawable/radio_selector"
                                android:button="@null"
                                android:paddingLeft="@dimen/_3sdp"
                                android:paddingRight="@dimen/_3sdp"
                                android:gravity="center"
                                android:textAllCaps="false"
                                android:layout_marginStart="3dp"
                                android:textColor="@drawable/radio_textcolor_selector" />
                            <RadioButton
                                android:id="@+id/radioCustom"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:background="@drawable/radio_selector"
                                android:button="@null"
                                android:text="@string/custom_text"
                                android:gravity="center"
                                android:textAllCaps="false"
                                android:layout_marginStart="3dp"
                                android:textColor="@drawable/radio_textcolor_selector" />
                        </RadioGroup>

                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View
                android:background="@color/grey_50"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layoutTransfer"
                android:background="?android:attr/selectableItemBackground"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:text="Bank Transfer"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="#000"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View
                android:background="@color/grey_50"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layoutDebit"
                android:background="?android:attr/selectableItemBackground"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:text="Debit / Credit Card"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="#000"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View
                android:background="@color/grey_50"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layoutQris"
                android:background="?android:attr/selectableItemBackground"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:text="QRIS E-Wallet"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="#000"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View
                android:background="@color/grey_50"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
